<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/title"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/question"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/answer_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/dollar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dollar"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/answerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectTip_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10sp"
            android:paddingBottom="10sp">

            <TextView
                android:id="@+id/tipQuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipQuest" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tip_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/tipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/tenButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tenPercent" />

                <RadioButton
                    android:id="@+id/twentyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twentyPercent" />

                <RadioButton
                    android:id="@+id/thirtyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/thirtyPercent" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10sp"
        android:paddingBottom="10sp">

        <Button
            android:id="@+id/calcButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/calculateButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/resulttv" />

    </LinearLayout>

</LinearLayout>